完成所有商品分类和轮播部分

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/iconfont.css" type="text/css">
 </head>
 
-<body>
+<body style="height: 2000px;">
     <div id="top">
         <div class="top_content clearfix">
             <div class="deliver">
@@ -61,8 +61,40 @@
                 <li><a href="#">海淘购</a></li>
                 <li><a href="#">特卖</a></li>
                 <li><a href="#">易购专区</a></li>
-                <li><a href="#">会有</a></li>
+                <li><a href="#">会员</a></li>
             </ul>
+            <div class="allclass_content">
+                <ul>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                    <li>
+                        <h4>手机通讯</h4>
+                        <a href="#">手机 智能数码 运营商 <em>&gt;</em></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div id="carousel">
