完成了公告栏的部分

--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
                     </li>
                 </ul>
             </div>
+            <div class="notice">
+                <h2>最新公告</h2>
+                <ul>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                    <li><a href="#">本部手机红色，颜值亮爆朋友圈...</a></li>
+                </ul>
+                <a href="#"><img src="images/adimg.png" alt=""></a>
+            </div>
         </div>
     </div>
     <div id="carousel">
