完成了大聚惠模块部分

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             </div>
             <div class="searchform">
                 <form action="#">
-                    <input type="text" id="searchtext" placeholder="零食盛宴 满99减50满199减100..."><input type="button" id="searchbtn" value="搜索">
+                    <input type="text" id="searchtext" placeholder="零食盛宴 满99减50满199减100..."><input type="button"
+                        id="searchbtn" value="搜索">
                 </form>
             </div>
             <div class="shoppingcar">
@@ -114,7 +115,42 @@
 
     </div>
     <div id="productshow">
-
+        <div class="djh_bar">
+            <h2 class="title">大聚惠</h2>
+            <a href="#" class="right_link">更多红包</a>
+        </div>
+        <div class="djh_content">
+            <div class="djh_content_div right_margin_6">
+                <a href="#">
+                    <img src="images/qycgbg.png" alt="">
+                </a>
+                <div class="djh_bottom">
+                    <em class="price">价值288元</em>
+                    <a class="f_bag">查看福包</a>
+                    <em class="buy_num">200人已购买</em>
+                </div>
+            </div>
+            <div class="djh_content_div right_margin_6">
+                <a href="#">
+                    <img src="images/qycgbg.png" alt="">
+                </a>
+                <div class="djh_bottom">
+                    <em class="price">价值288元</em>
+                    <a class="f_bag">查看福包</a>
+                    <em class="buy_num">200人已购买</em>
+                </div>
+            </div>
+            <div class="djh_content_div">
+                <a href="#">
+                    <img src="images/qycgbg.png" alt="">
+                </a>
+                <div class="djh_bottom">
+                    <em class="price">价值288元</em>
+                    <a class="f_bag">查看福包</a>
+                    <em class="buy_num">200人已购买</em>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="foot">
 
