完成底部模块部分

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/iconfont.css" type="text/css">
 </head>
 
-<body style="height: 2000px;">
+<body>
     <div id="top">
         <div class="top_content clearfix">
             <div class="deliver">
@@ -709,7 +709,63 @@
     </div>
 
     <div id="foot">
-
+        <div class="foot_content">
+            <div class="foot_con1200">
+                <ul>
+                    <li>
+                        <h2>关于我们</h2>
+                    </li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>关于我们</h2>
+                    </li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>关于我们</h2>
+                    </li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>关于我们</h2>
+                    </li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">关于我们</a></li>
+                </ul>
+                <ul class="lastul">
+                    <li>
+                        <h2>关于我们</h2>
+                    </li>
+                    <li><img src="images/foot_code.png" alt=""></li>
+                </ul>
+            </div>
+            <p class="friend_link">
+                <em>友情链接：</em><a href="#">百度</a><a href="#">百度</a><a href="#">百度</a><a href="#">百度</a><a href="#">百度</a>
+            </p>
+            <p>
+                备案信息备案信息备案信息备案信息备案信息备案信息备案信息备案信息备案信息备案信息备案信息
+            </p>
+            <p>版权信息版权信息版权信息版权信息版权信息版权信息版权信息版权信息版权信息版权信息版权信息</p>
+        </div>
     </div>
 </body>
 
